--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,12 @@
 <!-- adding id so I can target page specific elements -->
 <body id="contact-us" role="document">
     
+    <!-- skiplinks -->
+     <div class="skip-links">
+    <a href="#main-content" class="skip-link">Skip to Main Content</a>
+    <a href="#footer" class="skip-link">Skip to Footer</a>
+    </div>
+
     <header role="banner">
         <div class="container">
             <div class="nav">
@@ -58,7 +64,7 @@
             </div>
     </header>
 
-    <main role="main">
+    <main role="main" id="main-content">
         <div class="container">
 
             <!-- Contact us via email/phone -->
@@ -103,7 +109,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer id="footer">
         <div class="container">
             
             <img src="images/icons/logo-icon.png" alt=" Dwello logo" class="logo">
